JETcompiler/Tests/bad/bad027.myout
Error while processing expression: cannot apply assignment expression - incompatible types "DoubleType" and "IntegerType", line 5.
